<resources>

    <string name="app_name">万卷屋</string>

    <!--    MenuMain    -->
    <string name="action_open_drawer">打开侧栏</string>
    <string name="action_feedback">用户反馈</string>
    <string name="action_log_out">退出账号</string>
    <string name="action_add_course">添加课程</string>
    <string name="action_refresh_book">刷新数据</string>
    <string name="action_collection">收藏</string>
    <string name="action_share">分享</string>

    <!--    MenuDrawer    -->
    <string name="id_link">书 虫</string>

    <string name="nav_home">日程管理</string>
    <string name="nav_course">课表管理</string>
    <string name="nav_book_borrowed">我的借阅</string>
    <string name="nav_collect_book">我的收藏</string>
    <string name="nav_search_book">馆藏查询</string>
    <string name="nav_message">资讯定制</string>
    <string name="nav_more">更多功能待开发</string>
    <string name="nav_collections">校园问卷</string>
    <string name="nav_setting">软件设置</string>
    <string name="nav_feedback">问题反馈</string>


    <!--    library information   -->
    <string name="login_library">图书馆登陆</string>



    <!--    library toast information   -->

    <string name="failed_to_login_library">用户名或密码错误！</string>
    <string name="succeed_to_getBooks">获取图书列表成功</string>
    <string name="failed_to_getBooks">用户名或密码错误，请退出重新登陆！</string>
    <string name="server_failed">无法连接服务器，请检查网络！\n或若网络畅通，则图书馆服务器故障，请稍后重试！</string>>
    <string name="re_login">已退出当前用户，请重新登陆！</string>

    <string name="ing_getBookInformation">正在获取中...</string>
    <string name="succeed_to_getBookInformation">获取图书详细信息成功</string>
    <string name="failed_to_getBookInformation">未能获取图书详细信息！</string>

    <string name="book_detail_not_exist">\t 抱歉，豆瓣尚无本书详细信息！</string>
    <string name="not_collect_books">您尚未收藏任何图书\n快去万卷屋书库找找看吧！</string>
    <string name="not_borrow_books">您尚未借阅任何图书\n快去万卷屋书库找找看吧！</string>


    <string-array name="SearchBookType">
        <item>题名</item>
        <item>作者</item>
        <item>ISBN</item>
        <item>ISSN</item>
        <item>出版社</item>
        <item>分类号</item>
        <item>主题词</item>
        <item>统一刊号</item>
        <item>馆藏条码</item>
    </string-array>


    <!--    CardBook information   -->
    <string name="title_default">《无题》</string>
    <string name="borrowDay_default">借阅:2015/01/02</string>
    <string name="returnDay_default">归还:2015/12/31</string>
    <string name="borrowedTimes_default">续借次数:0/0</string>
    <string name="borrowButton">续          借</string>


    <!--    EduSystem information   -->

    <string name="login_edusys">教务系统登陆</string>



    <!--    Setting information   -->

    <string name="check_update">检查更新</string>
    <string name="update_state_start">获取版本信息中&#8230;</string>
    <string name="update_state_no">当前已是最新版本，无需更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_completed">缓存清理成功</string>
    <string name="feedback">反馈建议</string>
    <string name="send_email_to">mailto:gusteauscuter@163.com</string>
    <string name="about">关于软件</string>
    <string name="about_description">
        \n 万卷屋破万卷书
        \n 读万卷书 行万里路
        \n 建议反馈 @"华工书虫"
        \n
        \n 详情登陆 geekie.cc
    </string>

    <string name="help0">
        0.自定义:一款有[BIG]的软件怎么可能没有自定义,这不完美？！如需还原默认背景，手动清除./libSCUT/目录对应图片
    </string>

    <string name="help1">
        1.搜索:所有搜索结果均来源于华工图书馆
        \n>勾选"高级搜索",可显示在馆状态,速度较慢
        \n>取消勾选,一般搜索,在馆状态未知,速度较快
    </string>

    <string name="help2">
        2.详情:点击任意搜索结果,即可快速查看对应书籍详情,包括详细在馆信息,图书封面(来自@豆瓣),内容简介等
    </string>

    <string name="help3">
        3.收藏:在书籍详情页或搜索结果页点击收藏，即可将发现的图书记录下来，方便下次借阅&#8230;
    </string>

    <string name="help4">
        4.分享:在书籍详情或我的借阅界面,选择菜单栏中的分享选项,即可将图片快速分享至QQ,朋友圈&#8230;
    </string>

    <string name="check_toKnow">
        勾选“南校”或“北校”\n彩色图书即为在馆可借\n但加载速度将因此有所降低</string>
    <!--    system information   -->
    <string name="internet_not_connected">网络连接失败，请检查设置！</string>
    <string name="exit_hint">再按一次，退出！</string>



    <!--    system title of some activites   -->

    <string name="title_activity_userinfor">个人中心(静候更新)</string>
    <string name="title_activity_about">关于软件</string>
    <string name="title_activity_book_detail">书籍详情</string>
    <string name="title_activity_base">反馈建议</string>
    <string name="title_activity_search_result"> </string>
    <string name="title_activity_add_course">添加课程</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course_detail">课程详情</string>


</resources>
