<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gusteauscuter.youyanguan.navigation_view">

    <group android:id="@+id/groupDefault">

        <item android:id="@+id/action_feedback"
            android:title="@string/action_feedback"
            app:showAsAction="never" />
        <item android:id="@+id/action_open_drawer"
            android:title="@string/action_open_drawer"
            app:showAsAction="never" />

        <item android:id="@+id/action_log_out"
            android:title="@string/action_log_out"
            app:showAsAction="never" />

        <item android:id="@+id/action_refresh_book"
            android:title="@string/action_refresh_book"
            android:icon="@drawable/action_refresh"
            app:showAsAction="never"/>

        <item android:id="@+id/action_share"
            android:title="@string/action_share"
            android:icon="@drawable/ic_action_share"
            app:showAsAction="never" />

        <item android:id="@+id/action_add_course"
            android:title="@string/action_add_course"
            android:icon="@drawable/ic_action_collect"
            app:showAsAction="ifRoom" />

    </group>

</menu>
