<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_book_borrowed"
        android:title="@string/nav_book_borrowed"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_collect_book"
        android:icon="@drawable/ic_book_collected"
        android:title="@string/nav_collect_book"
        android:checkable="true"/>
    <item
        android:id="@+id/nav_search_book"
        android:icon="@drawable/ic_search_book"
        android:title="@string/nav_search_book"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/nav_setting"
        android:checkable="true"/>

</menu>