<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gusteauscuter.youyanguan.DepActivity.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ActionbarTheme" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/primaryColor"
                android:layout_marginBottom="20dp">
                <TextView
                    android:text="@string/about_description"
                    android:gravity="left"
                    android:layout_margin="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center|left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center|right"
                    android:background="@color/white"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|right"
                    android:layout_margin="3dp"
                    android:src="@mipmap/ic_gusteauscuter"/>
            </FrameLayout>


            <!--<TextView-->
                <!--android:visibility="visible"-->
                <!--android:background="@color/primaryColor"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_margin="@dimen/margin_large"-->
                <!--android:padding="@dimen/margin_small"-->
                <!--android:text="@string/help0"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->
            <!--<ImageView-->
                <!--android:visibility="visible"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/about0"-->
                <!--android:layout_margin="10dp"/>-->

            <TextView
                android:background="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:text="@string/help1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/about1"
                android:layout_margin="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/about2"
                android:layout_margin="10dp"/>

            <TextView
                android:background="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:text="@string/help2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/about3"
                android:layout_margin="10dp"/>

            <TextView
                android:background="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:text="@string/help3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/about4"
                android:layout_margin="10dp"/>


            <TextView
                android:background="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:text="@string/help4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/about5"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
